Update project with latest changes
